...
                    tabBarIcon: ({ color, size }) => <Briefcase color={color} size={size} />,
                }}
            />
            <Tabs.Screen
                name="applications"
                options={{
                    title: 'My Apps',
                    tabBarIcon: ({ color, size }) => <ClipboardList color={color} size={size} />,
                }}
            />
            <Tabs.Screen
                name="digital-cv"
                options={{
...
